# Nominatim-Data-Analyser

./: .gitignore  .gitmodules  CONTRIBUTING.md  MANIFEST.in  README.md  cli.py  pyproject.toml  python3  realPBF.json  requirements.txt  setup.py  usedPBF.pbf
.github/workflows/: ci-build-tests.yml  ci-tests.yml
analyser/: __init__.py
analyser/config/: config.py  default.yaml
analyser/core/: __init__.py  core.py  pipe.py
analyser/core/assembler/: __init__.py  pipe_factory.py  pipeline_assembler.py  rule_assembler.py
analyser/core/data_fetching/: sql_processor.py
analyser/core/deconstructor/: __init__.py  pipeline_deconstructor.py  yaml_rule_deconstructor.py
analyser/core/dynamic_value/: __init__.py  dynamic_value.py  resolver.py  switch.py  variable.py
analyser/core/model/: __init__.py  additionnal_data.py  element.py  geometry.py  node.py  paths.py
analyser/core/output_formatters/geojson/: feature_converter.py  geojson_formatter.py
analyser/core/output_formatters/osmoscope/: layer_formatter.py
analyser/core/pipes/: __init__.py  advanced_logical_unit.py  filling_pipe.py
analyser/core/pipes/advanced_logical_units/: __init__.py  advanced_logical_unit.py
analyser/core/pipes/data_fetching/: __init__.py  result_type.py  sql_processor.py
analyser/core/pipes/data_processing/: __init__.py  geometry_converter.py  loop_data_processor.py
analyser/core/pipes/output_formatters/: __init__.py  clusters_vt_formatter.py  geojson_feature_converter.py  geojson_formatter.py  osmoscope_layer_formatter.py  vector_tile_formatter.py
analyser/core/pipes/rules_specific_pipes/: __init__.py
analyser/core/qa_rule/: __init__.py  execution_context.py  qa_rule.py
analyser/core/rules/: __init__.py  bound_admin_no_adminlevel.py
analyser/core/yaml_logic/: complex_value_parser.py  yaml_loader.py
analyser/database/: connection.py
analyser/logger/: logger.py  timer.py
analyser/logic/: __init__.py  base_rule.py  core.py
analyser/logic/formatters/: __init__.py  geojson_formatter.py  layer_formatter.py
analyser/logic/rules/: __init__.py  bound_admin_no_adminlevel.py
analyser/rules_specifications/: BA_way_not_part_relation.yaml  addr_housenumber_A.yaml  addr_housenumber_no_digit.yaml  addr_housenumber_roman.yaml  addr_place_and_street.yaml  addr_place_or_street_rank28.yaml  addr_street_wrong_name.yaml  duplicate_label_role.yaml  no_admin_level.yaml  no_admin_level_vector_tile.yaml  place_nodes_close.yaml  postcode_bad_format.yaml  same_wikidata.yaml  ways_AB_not_part_relation.yaml
clustering-vt/: Makefile  clustering-vt.cpp  create-clusters  index.js  package-lock.json  package.json  python-vt.py
docs/: Add-New-Rule.md  Dynamic-Value.md  Overview.md  Pipes.md  YAML-Rule-Specification.md
src/analyser/: cli.py
src/analyser/config/: config.py  default.yaml
src/analyser/core/: core.py
src/analyser/core/assembler/: pipe_factory.py  pipeline_assembler.py
src/analyser/core/deconstructor/: pipeline_deconstructor.py
src/analyser/core/dynamic_value/: switch.py  variable.py
src/analyser/core/exceptions/: yaml_syntax_exception.py
src/analyser/core/pipes/: filling_pipe.py
src/analyser/core/yaml_logic/: yaml_loader.py
src/analyser/database/: __init__.py
src/analyser/rules_specifications/: bad_interpolations.yaml  same_wikidata.yaml
src/nominatim_data_analyser/: cli.py  config.py  default_config.yaml
src/nominatim_data_analyser/config/: config.py  default.yaml
src/nominatim_data_analyser/core/: __init__.py  core.py  pipe.py
src/nominatim_data_analyser/core/assembler/: __init__.py  pipe_factory.py  pipeline_assembler.py
src/nominatim_data_analyser/core/deconstructor/: pipeline_deconstructor.py
src/nominatim_data_analyser/core/dynamic_value/: __init__.py  dynamic_value.py  resolver.py  switch.py  variable.py
src/nominatim_data_analyser/core/exceptions/: __init__.py
src/nominatim_data_analyser/core/model/: __init__.py  geometry.py  node.py
src/nominatim_data_analyser/core/pipes/: __init__.py  filling_pipe.py
src/nominatim_data_analyser/core/qa_rule/: __init__.py  (+1 more)
src/nominatim_data_analyser/database/: __init__.py  connection.py
src/nominatim_data_analyser/logger/: timer.py
src/nominatim_data_analyser/rules_specifications/: BA_way_not_part_relation.yaml  addr_housenumber_no_digit.yaml  addr_place_or_street_rank28.yaml  duplicate_label_role.yaml
tests/: conftest.py
tests/analyser/core/: test_core.py
tests/analyser/deconstructor/: test_pipeline_deconstructor.py
tests/analyser/model/: test_node.py
tests/analyser/pipes/: test_geometry_converter.py  test_loop_data_processor.py
tests/assembler/: test_pipe_factory.py  test_pipeline_assembler.py
tests/config/: test_config.py
tests/config/broken_config/: default.yaml
tests/config/custom_config/: config.yaml
tests/core/: test_core.py
tests/core/rules/: rule1.yaml
tests/database/: test_connection.py
tests/deconstructor/: test_pipeline_deconstructor.py
tests/dynamic_value/: test_resolver.py  test_switch.py  test_variable.py
tests/model/: test_node.py
tests/pipes/: test_geojson_feature_converter.py  test_geojson_formatter.py  test_geometry_converter.py  test_loop_data_processor.py  test_osmoscope_layer_formatter.py  test_pipe.py  test_sql_processor.py  test_vector_tile_formatter.py
tests/pipes/output_formatters/: test_geojson_feature_converter.py  test_geojson_formatter.py  test_osmoscope_layer_formatter.py  test_vector_tile_formatter.py
tests/yaml_logic/: test_construct_sub_pipeline.yaml  test_load_wrong_yaml.yaml  test_yaml_loader.py
tests/yaml_logic/yaml/: test_construct_switch.yaml  test_construct_variable.yaml
visualizer/: package-lock.json  package.json
visualizer/public/: index.html  manifest.json
visualizer/src/: App.css  App.js  index.css
visualizer/src/components/: InformationPanel.js  Layer.js  LayersList.js  LoadingIndicator.js  MainMenu.js  MapContainer.js  OLMap.js
visualizer/src/config/: config.json
visualizer/src/ol-map-logic/: ClusteredFeaturesLayer.js  FeaturesLayerFactory.js  GeoJSONFeaturesLayer.js  VectorTileFeaturesLayer.js
(+49 files in other folders)
